<resources>
    <string name="app_name">TryMyUI</string>
    <string name="alert">Alert</string>
    <string name="device">android</string>
    <string name="didyouforgetpassword">Did you forget your password?</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="sendFeedback">Send feedback</string>
    <string name="reportissue">Report an issue</string>
    <string name="leavetest">Leave test</string>
    <string name="forgetpassworddesc">Please submit the email address associated with your account and we will send you a password reset link.</string>
    <string name="enteryourregisteredemail">Enter your registered email...</string>
    <string name="submit">Submit</string>
    <string name="typeyourfeedbackhere">Type your feedback here...</string>
    <string name="sendFeedbackdesc">Please be specific to help us address your feeback. For exmample, If feedback concerns a test, please add the test ID. Thank you.</string>
    <string name="howtotakeatesttrymyui">How to take a test with TryMyUI</string>
    <string name="testingamobileapp">Example: Testing a Mobile App</string>
    <string name="tutorialvideodesc">Watch this tutorial video to learn everything you need to know in order to be the best
                                    tester</string>
    <string name="watchvideo">Watch video</string>
    <string name="ok_alert">Ok</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="example_video">Example video:</string>
    <string name="how_to_test"><u>How to test</u></string>
    <string name="checkUpdates">Checking update.</string>
    <string name="are_you_sure_update_app">New version available.</string>
    <string name="yes">Yes</string>
    <string name="yes_i_do">Yes, I do</string>
    <string name="no_i_dont">No, I don\'t</string>
    <string name="no">No</string>
    <string name="later">Later</string>
    <string name="rating">Rate</string>
    <string name="update">Update</string>
    <string name="pleasewait">Please wait.</string>
    <string name="whatsnew">What’s new: \n </string>
    <string name="no_internet_connection">Please check your internet connectivity.</string>
    <string name="email">Email: </string>
    <string name="typer_here"><i>Type here</i></string>
    <string name="auth_progress_msg">Authenticatication is in progress.</string>
    <string name="email_validation_msg">Email address is not valid.</string>
    <string name="pswd_validation_msg">Password should be at least 4 characters.</string>
    <string name="testid_validation_msg">Test ID is not valid.</string>
    <string name="username_validation_msg">Username is not valid.</string>
    <string name="no_tests_available_message">There are no usability tests that meet your demographics available at this time. We will notify you by email when one comes up that meets your demographics. You can also check back here anytime.</string>
    <string name="no_tests_completed_message">You  haven\'t performed tests yet.</string>
    <string name="no_test_performed_toshow_in_pending_test">Please complete your pending tests to view this data. </string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="my_status">My status:</string>
    <string name="special_qualification_text1">The customer has required the following additional requirements:</string>
    <string name="technical_qualification_text1">The customer has required the following additional technical requirements:</string>
    <string name="face_recording_permission_text">This test requires you to record your face in addition to your screen while testing.\n If you are willing to do so, please click YES below.</string>
    <string name="your_first_task">Your first task:</string>
    <string name="start_test_dialog_msg">When you hit "Start Test", we will show you a website or app for about 15 seconds and then
        	we will ask you about your impressions of this website. </string>
    <string name="start_test_dialog_msg_one">Please say out loud what you are looking at and what you notice.</string>
    <string name="start_test">Start Test</string>
    <string name="special_qualification_requirement">Do you meet these requirements?</string>
    <string name="face_recording_permission_question">Do you want to proceed?</string>
    <string name="logout_successful">Logout successful</string>
    <string name="leave_msg_to_post">Please leave a message to post.</string>
    <string name="feedback_posted_success">Feedback posted successfully.</string>
    <string name="app_basic_instruction">If you haven\'t already, please install the app now. When you are done, move on to the next task.</string>
    <string name="preliminary_instructions">When you hit Start Recording, TryMyUI will start capturing everything that\'s displayed on screen.\n\nDuring your test, tap the UI bubble to view or hide the current task.
    </string>
    <string name="finish_recording">If you have completed this test, hit the Finish Recording button below.\n\nYour Recording will be auto-saved to your device, and you will be asked to confirm it for upload.
    </string>
    <string name="haveauniquetestcode">Have a unique test code?</string>
    <string name="pleaseeneterlogininformation">Please enter login information below</string>
    <string name="pleaseentertestcodebasicinfo">Please enter test code and basic info</string>
    <string name="areyouatrymyuitester">Are you a TryMyUI tester? </string>
    <string name="fullname">Full name</string>
    <string name="testcode">Test code</string>
    <string name="special_requirements">Special requirements</string>
    <string name="technical_requirements">Technical requirements</string>
    <string name="no_available_test">There are currently no available tests. \n Please check back soon.</string>
    <string name="non_disclosure_agreement">Non-disclosure agreement</string>
    <string name="nda_checkbox_text">I have read, understand and agree</string>
    <string name="clickHere">Click here</string>
    <string name="link_to_open_app"><u>Install app</u></string>
    <string name="link_to_open_web"><u>Open test website</u></string>
    <string name="trymyuitester">TryMyUI Tester</string>
    <string name="trymyuiaccount">TryMyUI account</string>
    <string name="testwithuniquecode">Test with unique code</string>
    <string name="gotoframeofmind"><u>Go to Frame of Mind </u></string>
    <string name="select_opt_to_strt_test">Select an option below to start testing</string>
    <string name="returntotask"><u>Back to tasks</u></string>
    <string name="gotofirsttask">Go to first task &gt;</string>
    <string name="recordingtimeup">Your recording time limit has been reached. Do you want to upload video?</string>
    <string name="upload">Upload</string>
    <string name="do_you_want_to_upload">Do you want to upload this video?</string>
    <string name="no_special_qualification">If you do not meet the requirements, we will remove this test from your dashboard. Are you sure you wish to reject this test?</string>
    <string name="no_video_in_path">There is no recorded video in your path</string>
    <string name="uploading_message">The video is uploading.\nPlease Wait.</string>
    <string name="special_criteria">Please <b>say out loud</b> how you meet the following special criteria asked for by the customer:</string>
    <string name="contiune_with_frame_of_mind">Continue to Frame of Mind</string>
    <string name="continue_with_impression_test">Continue to Impression test</string>
    <string name="continue_with_technical_qualification">Continue to Technical qualification</string>
    <string name="wireframe_button_text">Yes, I Understood!</string>
    <string name="scenario">Please read the frame of mind aloud.</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="upload_video_again">Failed to upload video.</string>
    <string name="upload_video_again_cancel_test">Failed to upload video, canceling your test.</string>
    <string name="are_you_sure_to_cancel_test">Are you sure to cancel the test?</string>
    <string name="done">Done</string>
    <string name="submit_caps"> SUBMIT </string>
    <string name="next_caps">NEXT  &gt;</string>
    <string name="no_survey_que">There are no survey questions available for this test.</string>
    <string name="no_ux_corwd_que">There are no UX Crowd questions available for this test.</string>
    <string name="name">Name:</string>
    <string name="test_id">Test ID:</string>
    <string name="login">Log in</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="continu">Continue</string>
    <string name="begin_test">Begin test</string>
    <string name="special_criteria_title">Special Criteria</string>
    <string name="technical_criteria_title">Technical Criteria</string>
    <string name="please_note">Please Note:</string>
    <string name="back_caps"> &lt;  BACK</string>
    <string name="feedback_text">Please be specific to help us address your feedback. For example, if feedback concerns a test, please add the test ID. Thank you.</string>
    <string name="feedback_hint">Please include a Test ID if relevant.</string>
    <string name="seq_rating_text">How easy or difficult did you find this task?</string>
    <string name="seq_rate_and_task_complete_not_done">Please rate and indicate task completion before moving to next task.</string>
    <string name="seq_not_done">Please rate this task before moving to next task.</string>
    <string name="task_complete_not_done">Please indicate task completion before moving to next task.</string>
    <string name="video_upload_successfully">Video uploaded successfully.</string>
    <string name="impressiontest">Impression Test</string>
    <string name="impressiontest_message">
        When you hit "Start the Test" we will show you a website for 15 secounds.
        Then, we will ask you some questions about your first impression.
        \n\n
        Please say what you are looking at and describe what you are seeing and thinking.

    </string>
    <string name="questionshotformbold"><b>Q</b></string>
    <string name="impressiontest_message_landscape">
        When you hit "Start the Test" we will show you a website for 15 secounds.
        Then, we will ask you some questions about your first impression.
        \n
        Please say what you are looking at and describe what you are seeing and thinking.

    </string>
    <string name="impression_test_que">  Q1: Say 3 words you remember from the site, or would use to describe the site.

\n\n Q2: What is this site about?

\n\n Q3: What services and/or products are offered on this site? For whom?

\n\n Q4. What is the feel of the site? (e.g. professional, fun, small-company, corporate?)</string>
    <string name="done_with_impression_test">I’M DONE WITH THE IMPRESSION TEST</string>
    <string name="cancel">Cancel</string>
    <string name="assist_gesture_touch"><b>Turn on \"Show taps\"</b></string>
    <string name="yes_take_to_link">Yes, show me again</string>
    <string name="no_already_enabled">Show taps already enabled</string>
    <string name="need_help_gesture_recording">Need help turning on gesture recording?</string>
    <string name="permission_denied_text">You must allow this permission in order to perform TryMyUI tests, or we will not be able to collect and share your complete feedback with the customer.</string>
    <string name="exit">Exit</string>
    <string name="turn_on_in_settings">Turn on in settings</string>
    <string name="taketest">Take test</string>
    <string name="testduration">Test duration: </string>
    <string name="mobilewebsitetest">Mobile website test</string>
    <string name="pretestscreenerquest">pre-test screener questions</string>
</resources>