<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_denied_text"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/_16sp"
        android:lineSpacingExtra="@dimen/_7dp"
        android:id="@+id/tv_lbl_permission_denied_text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tv_lbl_permission_denied_text"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_in_settings"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/green"
            android:id="@+id/tv_turn_on_in_settings"
            android:textSize="@dimen/_16sp"
            android:fontFamily="sans-serif-medium"
            android:layout_margin="@dimen/_10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/tv_exit"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/dim_gray"
            android:fontFamily="sans-serif-light"
            android:layout_margin="@dimen/_10dp"/>

    </LinearLayout>

</RelativeLayout>