<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shadow_layout_orange"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:padding="@dimen/_10dp">

            <TextView
                android:id="@+id/textview_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_text"
                android:textColor="@color/textcolor_grey"
                android:textSize="@dimen/text_size_semi_medium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textview_feedback"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/rectangle_border"
                android:paddingTop="@dimen/_5dp">

                <EditText
                    android:id="@+id/editTextFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:hint="@string/feedback_hint"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:digits="qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM !@#$%^&amp;*()_-+=`~,.?/':;"
                    android:textSize="@dimen/text_size_semi_medium">

                    <requestFocus />
                </EditText>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal"
        android:padding="@dimen/_10dp"
        android:weightSum="2">


        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/light_grey"
            android:text="@string/cancel"
            android:textColor="@color/textcolor_grey"
            android:textSize="25dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_weight="1"
            android:background="@color/try_my_ui_green"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/_25dp"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>
